Boilerplate completed of landing page and fiddling with header

--- a/index.html
+++ b/index.html
@@ -4,16 +4,50 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Michael Sallam's Portfolio</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+    <script src="https://kit.fontawesome.com/27eac3d178.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="assets/css/style.css" type="text/css">
 </head>
 <body>
     <header>
-        <div>Picture of me 1/3</div> <div>nav bar, name and title</div>
+        <div class="row no-gutters">
+            <div>
+                <a href="index.html" class="col-4 logo"></a>
+            </div>
+                <div class="col-8">
+                    <h1>Michael Sallam</h1>
+                    <h2>Full Stack Web Developer</h2>
+                    <span>
+                        <a href="#">About</a>
+                        <a href="#">Projects</a>
+                        <a href="#">Experience</a>
+                        <a href="#">Education</a>
+                        <a href="#">Collaboration</a>
+                    </span>
+                </div>
+        </div>
     </header>
     <section>
     
     </section>
     <footer>
-        <div>Download</div> <div>Social links</div>
+        <span>
+            <div class="row no-gutters">
+                <div class="col-3">
+                    <p>Download my CV 
+                        <a href="" download><i class="fas fa-download"></i></a>
+                    </p>
+                </div>
+                    <div class="col-9">
+                        <p>Social links 
+                            <a href="https://www.linkedin.com/in/michael-sallam-1309a7195/" target="_blank"><i class="fab fa-linkedin"></i></a>
+                            <a href="#"><i class="fab fa-github" target="_blank"></i></a>
+                            <a href="#"><i class="fab fa-facebook" target="_blank"></i></a>
+                            <a href="#"><i class="fab fa-instagram" target="_blank"></i></a>
+                        </p>
+                    </div>
+            </div>
+        </span>
     </footer>
 </body>
 </html>
