Created header and footer, need to be made responsive in future and added all webpages with header and footer in place

--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@
                     <h1 class="name">Michael Sallam</h1>
                     <h2 class="title">Full Stack Web Developer</h2>
                     <span class="navbar">
-                        <a href="about.html">About</a>
+                        <a href="about.html" class="active">About</a>
                         <a href="projects.html">Projects</a>
                         <a href="experience.html">Experience</a>
                         <a href="education.html">Education</a>
@@ -27,18 +27,7 @@
                 </div>
         </div>
     </header>
-    <section>
-                <div>
-                    <p>Reasons to hire me</p>
-                </div>
-                    <i class="fas fa-info">About Me</i>
-                <div>
-                    <p>Reasons to hire me</p> 
-                </div>      
-    </section>
-    <section>
-    Languages I use <i class="fab fa-css3-alt"></i> <i class="fab fa-html5"></i>
-    </section>
+
     <footer class="container-fluid">
         <div class="row footing">
                 <div class="col-5">
