--- a/collaboration.html
+++ b/collaboration.html
@@ -22,23 +22,12 @@
                         <a href="projects.html">Projects</a>
                         <a href="experience.html">Experience</a>
                         <a href="education.html">Education</a>
-                        <a href="collaboration.html">Collaboration</a>
+                        <a href="collaboration.html" class="active">Collaboration</a>
                     </span>
                 </div>
         </div>
     </header>
-    <section>
-                <div>
-                    <p>Reasons to hire me</p>
-                </div>
-                    <i class="fas fa-info">About Me</i>
-                <div>
-                    <p>Reasons to hire me</p> 
-                </div>      
-    </section>
-    <section>
-    Languages I use <i class="fab fa-css3-alt"></i> <i class="fab fa-html5"></i>
-    </section>
+
     <footer class="container-fluid">
         <div class="row footing">
                 <div class="col-5">
