--- a/projects.html
+++ b/projects.html
@@ -19,7 +19,7 @@
                     <h2 class="title">Full Stack Web Developer</h2>
                     <span class="navbar">
                         <a href="about.html">About</a>
-                        <a href="projects.html">Projects</a>
+                        <a href="projects.html" class="active">Projects</a>
                         <a href="experience.html">Experience</a>
                         <a href="education.html">Education</a>
                         <a href="collaboration.html">Collaboration</a>
@@ -27,18 +27,7 @@
                 </div>
         </div>
     </header>
-    <section>
-                <div>
-                    <p>Reasons to hire me</p>
-                </div>
-                    <i class="fas fa-info">About Me</i>
-                <div>
-                    <p>Reasons to hire me</p> 
-                </div>      
-    </section>
-    <section>
-    Languages I use <i class="fab fa-css3-alt"></i> <i class="fab fa-html5"></i>
-    </section>
+
     <footer class="container-fluid">
         <div class="row footing">
                 <div class="col-5">
