Updated readme for submission

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 </div>
         </div>
     </header>
-    <section>
+    <section class="container-section">
                 <div>
                     <p>Reasons to hire me</p>
                 </div>
@@ -36,7 +36,7 @@
                     <p>Reasons to hire me</p> 
                 </div>      
     </section>
-    <section>
+    <section class="container-section">
     Languages I use <i class="fab fa-css3-alt"></i> <i class="fab fa-html5"></i>
     </section>
     <footer class="container-fluid">
